Add correct and error to css

--- a/no bootstrap/noboot.html
+++ b/no bootstrap/noboot.html
@@ -16,6 +16,7 @@
                     <legend>
                         <p>Test Form</p>
                     </legend>
+                    <span id="msg"></span>
                     <div id="fields">
                         <div>
                             <label for="username">Username</label>
@@ -23,11 +24,10 @@
                         </div>
                         <div>
                             <label for="email">Email</label>
-                            <input type="email" name="email" id="email" placeholder="example@example.com" />
+                            <input type="text" name="email" id="email" placeholder="example@example.com" />
                         </div>
                         <div>
                             <input type="submit" value="Submit" />
-                            <span id="msg"></span>
                         </div>
                     </div>
                 </fieldset>
