use closures in js

--- a/no bootstrap/noboot.html
+++ b/no bootstrap/noboot.html
@@ -23,7 +23,7 @@
                             <input type="text" name="username" id="username" placeholder="Username" />
                         </div>
                         <div>
-                            <label for="email">Email</label>
+                            <label for="email">Email *</label>
                             <input type="text" name="email" id="email" placeholder="example@example.com" />
                         </div>
                         <div>
