change text to be more professional

--- a/no bootstrap/noboot.html
+++ b/no bootstrap/noboot.html
@@ -11,10 +11,10 @@
     </header>
     <main>
         <div>
-            <form id="regform" action="" method="">
+            <form id="loginform" action="" method="">
                 <fieldset>
                     <legend>
-                        <p>Test Form</p>
+                        <p>Validity Form</p>
                     </legend>
                     <span id="msg"></span>
                     <div id="fields">
