update regex and file names and folders

--- a/no bootstrap/index.html
+++ b/no bootstrap/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head lang="en">
-    <link rel="stylesheet" type="text/css" href="css2.css">
-    <script src="js2.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/main.js"></script>
 </head>
 
 <body>
