--- a/no bootstrap/index.html
+++ b/no bootstrap/index.html
@@ -4,6 +4,7 @@
 <head lang="en">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lora" rel="stylesheet">
 </head>
 
 <body>
@@ -21,6 +22,7 @@
                         <div>
                             <label for="username">Username</label>
                             <input type="text" name="username" id="username" placeholder="Username" />
+                            <span class="correct"></span>
                         </div>
                         <div>
                             <label for="email">Email *</label>
