update error or correct msg

--- a/no bootstrap/index.html
+++ b/no bootstrap/index.html
@@ -19,16 +19,16 @@
                     </legend>
                     <span id="msg"></span>
                     <div id="fields">
-                        <div>
+                        <div class="form-fields username-field">
                             <label for="username">Username</label>
                             <input type="text" name="username" id="username" placeholder="Username" />
                             <span class="correct"></span>
                         </div>
-                        <div>
+                        <div class="form-fields email-field">
                             <label for="email">Email *</label>
                             <input type="text" name="email" id="email" placeholder="example@example.com" />
                         </div>
-                        <div>
+                        <div class="form-fields submit-field">
                             <input type="submit" value="Submit" />
                         </div>
                     </div>
