--- a/no bootstrap/index.html
+++ b/no bootstrap/index.html
@@ -19,17 +19,28 @@
                     </legend>
                     <span id="msg"></span>
                     <div id="fields">
-                        <div class="form-fields username-field">
-                            <label for="username">Username</label>
-                            <input type="text" name="username" id="username" placeholder="Username" />
-                            <span class="correct"></span>
+                        <div class="form-fields">
+                            <div class="username-field">
+                                <label for="username">Username</label>
+                                <input type="text" name="username" id="username" placeholder="Username" class="datafield" />
+                            </div>
+                            <p class="msg">Enter username</p>
                         </div>
-                        <div class="form-fields email-field">
-                            <label for="email">Email *</label>
-                            <input type="text" name="email" id="email" placeholder="example@example.com" />
+                        <div class="form-fields">
+                            <div class="email-field">
+                                <label for="email">Email *</label>
+                                <input type="text" name="email" id="email" placeholder="example@example.com" class="datafield" />
+                            </div>
+                            <p class="msg">Enter email</p>
                         </div>
-                        <div class="form-fields submit-field">
-                            <input type="submit" value="Submit" />
+                        <div class="form-fields">
+                            <div class="submit-field">
+                                <input type="submit" value="Submit" />
+                            </div>
+                            <p class="msg">
+                                <a href="#">Create a new account</a> |
+                                <a href="#">Forgot email?</a>
+                            </p>
                         </div>
                     </div>
                 </fieldset>
