add header to form

--- a/no bootstrap/index.html
+++ b/no bootstrap/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/main.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lora" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lora|Reem+Kufi" rel="stylesheet">
 </head>
 
 <body>
@@ -14,9 +14,7 @@
         <div>
             <form id="loginform" action="" method="">
                 <fieldset>
-                    <legend>
-                        <p>Validity Form</p>
-                    </legend>
+                    <h1 class="formHeader">Log in to your account</h1>
                     <span id="msg"></span>
                     <div id="fields">
                         <div class="form-fields">
