compare objects jquery

--- a/ajaxlogin/index.html
+++ b/ajaxlogin/index.html
@@ -6,8 +6,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/main.js"></script>
-    <script src="js/ajax.js"></script>
-    <script src="js/jquery.js"></script>
 </head>
 
 <body>
@@ -23,7 +21,7 @@
                         <div class="form-fields">
                             <div class="username-field">
                                 <label for="username">Username</label>
-                                <input type="text" name="username" id="username" placeholder="Username" class="datafield" />
+                                <input type="text" name="username" id="username" placeholder="username" class="datafield" />
                             </div>
                             <p class="msg">Enter username</p>
                         </div>
