update jquery to render appropriate data

--- a/ajaxlogin/index.html
+++ b/ajaxlogin/index.html
@@ -23,14 +23,14 @@
                                 <label for="username">Username</label>
                                 <input type="text" name="username" id="username" placeholder="username" class="datafield" />
                             </div>
-                            <p class="msg">Enter username</p>
+                            <p class="msg">enter username</p>
                         </div>
                         <div class="form-fields">
                             <div class="email-field">
                                 <label for="email">Email *</label>
                                 <input type="text" name="email" id="email" placeholder="example@example.com" class="datafield" />
                             </div>
-                            <p class="msg">Enter email</p>
+                            <p class="msg">enter email</p>
                         </div>
                         <div class="form-fields">
                             <div class="submit-field">
